# qkd-etsi-api-c-wrapper

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.txt  README.md  history.txt
include/: api.h  cerberis_xgr.h  debug.h  qkd_config.h.in  qkd_etsi_api.h  simulated.h
include/etsi004/: api.h  simulated.h
include/etsi004/backends/: python_client.h  simulated.h
include/etsi014/: api.h  cerberis_xgr.h
include/etsi014/backends/: cerberis_xgr.h  qkd_etsi014_backend.h  simulated.h
scripts/: build_wrapper.sh  env_var.sh  etsi004_env.sh  install_python_etsi004_client.sh
src/: api.c  cerberis_xgr.c  simulated.c
src/etsi004/: api.c
src/etsi004/backends/: python_client.c  simulated.c
src/etsi014/: api.c
src/etsi014/backends/: cerberis_xgr.c  qkd_etsi014_backend.c  simulated.c
tests/: api_test.c
tests/etsi004/: api_test.c
tests/etsi014/: api_full_test.c  api_test.c
